tests/NormalTests/paczka1/fuzzy1/84202787.err
Error in line 3: WdT17lgzo0J A785 44,6
Error in line 2: 83PK8Rx5 A574 44,5
Error in line 4: WdT17lgzo0J A173 12,2
Error in line 24: ZOlS5 A785 88,9
Error in line 21: CeIGE A785 74,9
Error in line 38: A785 A785 38,35
Error in line 37: CeIGE A574 10,9
